--- a/Drv_OSIPI_Archive_HdaItem/Drv_OSIPI_Archive_HdaItem.vcxproj
+++ b/Drv_OSIPI_Archive_HdaItem/Drv_OSIPI_Archive_HdaItem.vcxproj
@@ -193,7 +193,6 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BrowseNetworkServers.cpp" />
     <ClCompile Include="BrowserHdaItem.cpp" />
     <ClCompile Include="ClientSettingsDialog.cpp" />
     <ClCompile Include="ConnectionAttributes.cpp" />
@@ -213,6 +212,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PIApplication.cpp" />
+    <ClCompile Include="PIServerInteractor.cpp" />
     <ClCompile Include="PluginObjectFactory.cpp" />
     <ClCompile Include="PropertySet.cpp" />
     <ClCompile Include="pugixml\pugixml.cpp" />
@@ -228,7 +228,6 @@
     <None Include="res\Drv_OSIPI_Archive_HdaItem.rc2" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BrowseNetworkServers.h" />
     <ClInclude Include="BrowserHdaItem.h" />
     <ClInclude Include="ClientSettingsDialog.h" />
     <ClInclude Include="ConnectionAttributes.h" />
@@ -248,6 +247,7 @@
     <ClInclude Include="ParamValueList.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PIApplication.h" />
+    <ClInclude Include="PIServerInteractor.h" />
     <ClInclude Include="PluginObjectFactory.h" />
     <ClInclude Include="PropertySet.h" />
     <ClInclude Include="Record.h" />
